<resources>
    <string name="app_name">Viajes</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="inicio" translatable="false">Easy Way</string>
    <string name="tusRutas">Tus rutas</string>
    <string name="puntosInteres">Puntos de interes</string>
    <string name="notificacionesOpcionTitulo">Mostrar notificaciones</string>
    <string name="vibracionOption">Activar o desactivar vibracion</string>
    <string name="lenguajeOpcionTitulo">Selecciona el idioma</string>
    <string name="lenguajeOpcion">Selecciona el idioma de la app</string>
    <string name="textoNotificacionTitulo">Es la hora!</string>
    <string name="textoNotificacion">Tu ruta esta lista</string>
    <string name="textoToastRuta">Fecha para la ruta</string>
    <string name="menuInicio">Inicio</string>
    <string name="otrasOpciones">Otras opciones</string>
    <string name="configuracion">Configuracion</string>
    <string name="cerrarSesion">Cerrar sesion</string>


    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="secciones">Secciones</string>
    <string name="acerca">acerca de</string>
    <string-array name="names">
        <item>Spanish</item>
        <item>English</item>
    </string-array>
    <string-array name="values">
        <item>Spanish</item>
        <item>English</item>
    </string-array>
</resources>
